[package]
name = "ram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wikipedia = "0.3.1"
scraper = "0.17.1"
id3 = "1.7.0"
youtube_dl = "0.8.1"
image = "0.24.6"
serde_json = "1.0.104"
reqwest = { version = "0.11.18", features = ["blocking"] }
